--- a/task-05.html
+++ b/task-05.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     <p><a href="index.html">Return</a></p>
+
+    <input type="text" id="name-input" placeholder="Please enter your name" />
+    <h1>Hello, <span id="name-output">Anonymous</span>!</h1>
+
     <script src="./js/task-05.js"></script>
   </body>
 </html>
