--- a/task-08.html
+++ b/task-08.html
@@ -8,6 +8,19 @@
   </head>
   <body>
     <p><a href="index.html">Return</a></p>
+
+    <form class="login-form">
+  <label>
+    Email
+    <input type="email" name="email" />
+  </label>
+  <label>
+    Password
+    <input type="password" name="password" />
+  </label>
+  <button type="submit">Login</button>
+</form>
+
     <script src="./js/task-08.js"></script>
   </body>
 </html>
