--- a/task-02.html
+++ b/task-02.html
@@ -7,7 +7,7 @@
     <title>Task 2</title>
   </head>
   <body>
-    <p><a href="index.html">Return</a></p>
+    <p><a href="index.html">Go back</a></p>
 
     <ul id="ingredients"></ul>
 
