--- a/task-03.html
+++ b/task-03.html
@@ -7,7 +7,7 @@
     <title>Task 3</title>
   </head>
   <body>
-    <p><a href="index.html">Return</a></p>
+    <p><a href="index.html">Go back</a></p>
 
     <ul class="gallery"></ul>
 
