--- a/task-04.html
+++ b/task-04.html
@@ -7,7 +7,7 @@
     <title>Task 4</title>
   </head>
   <body>
-    <p><a href="index.html">Return</a></p>
+    <p><a href="index.html">Go back</a></p>
 
     <div id="counter">
       <button type="button" data-action="decrement">-1</button>
