--- a/task-07.html
+++ b/task-07.html
@@ -7,7 +7,7 @@
     <title>Task 7</title>
   </head>
   <body>
-    <p><a href="index.html">Return</a></p>
+    <p><a href="index.html">Go back</a></p>
 
     <input id="font-size-control" type="range" min="16" max="96" />
     <br />
