--- a/task-08.html
+++ b/task-08.html
@@ -7,7 +7,7 @@
     <title>Task 8</title>
   </head>
   <body>
-    <p><a href="index.html">Return</a></p>
+    <p><a href="index.html">Go back</a></p>
 
     <form class="login-form">
   <label>
