--- a/task-09.html
+++ b/task-09.html
@@ -7,7 +7,7 @@
     <title>Task 9</title>
   </head>
   <body>
-    <p><a href="index.html">Return</a></p>
+    <p><a href="index.html">Go back</a></p>
 
     <div class="widget">
       <p>Background color: <span class="color">-</span></p>
