--- a/task-10.html
+++ b/task-10.html
@@ -7,7 +7,7 @@
     <title>Task 10</title>
   </head>
   <body>
-    <p><a href="index.html">Return</a></p>
+    <p><a href="index.html">Go back</a></p>
 
     <div id="controls">
       <input type="number" min="1" max="100" step="1" />
